[package]
name    = "lol-pronos-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lol-pronos-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum           = { version = "0.7", features = ["macros"] }
tokio          = { version = "1",   features = ["full"] }
tower-http     = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt       = "0.15"
uuid         = { version = "1", features = ["v4"] }

# Utilities
dotenvy            = "0.15"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror          = "1"
chrono             = { version = "0.4", features = ["serde"] }
